<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reg_bg"
    tools:context=".register"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_form_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_marginStart="37dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="46dp"
        android:text="@string/Register_tv_form_name"
        android:textColor="@color/reg_tittel"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_form_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:hint="@string/Register_et_fullname"
        android:inputType="textPersonName"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_fullname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:hint="@string/Register_et_username"
        android:inputType="textPersonName"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:hint="@string/Register_et_email"
        android:inputType="textEmailAddress"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:hint="@string/Register_et_Password"
        android:inputType="textPassword"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_rePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:hint="@string/Register_et_rePassword"
        android:inputType="textPassword"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_rePassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/Register_tv_gender"
        android:textAlignment="viewStart"
        android:textColor="@color/hint"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/rggtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_gender">

        <RadioButton
            android:id="@+id/rbtn_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_rbtn_male"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbtn_femal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/Register_rbtn_femal"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Register_btn_Register"
        android:layout_below="@id/rggtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/reg"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_Register_face"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_Register"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/face"
        android:text="@string/Register_btn_Register_face"
        android:textColor="@color/white"/>

</RelativeLayout>