<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <!-- التطبيق يدعم اللغة العربية والانجليزية-->

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/Signin_et_username"
        android:textColor="@color/reg_enter"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="textPersonName"
        android:textColor="@color/reg_bar"
        android:textColorHint="@color/reg_enter"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/Signin_et_Password"
        android:inputType="textPassword"
        android:textColor="@color/reg_bar"
        android:textColorHint="@color/hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_username"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <Button
        android:id="@+id/btn_Signin"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/btn"
        android:text="@string/Signin_btn_Signin"
        app:layout_constraintEnd_toEndOf="@+id/et_Password"
        app:layout_constraintStart_toStartOf="@+id/et_Password"
        app:layout_constraintTop_toBottomOf="@+id/et_Password" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_Signin"
        app:layout_constraintStart_toStartOf="@+id/btn_Signin"
        app:layout_constraintTop_toBottomOf="@+id/btn_Signin">

        <TextView
            android:id="@+id/tv_No_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Signin_tv_No_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_create_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Signin_tv_Create_one"
            android:textColor="@color/white"
            android:textColorHint="@color/hint"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <View
            android:layout_width="145dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/view" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_horizontal"
            android:text="@string/Signin_tv_or"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View
            android:layout_width="145dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/view" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/btn_Signin_Facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn"
            android:text="@string/btn_Signin_Facebook"
            android:textAllCaps="false"
            app:icon="@drawable/fb"
            app:iconGravity="start"
            app:iconPadding="0dp"
            app:iconSize="50dp"
            app:iconTintMode="multiply" />

        <Button
            android:id="@+id/btn_Signin_Google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn"
            android:text="@string/Signin_btn_Signin_Google"
            android:textAllCaps="false"
            app:icon="@drawable/googel"
            app:iconGravity="start"
            app:iconPadding="0dp"
            app:iconSize="50dp"
            app:iconTintMode="multiply" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>